syntax = "proto3";
package gossip;

import "gogoproto/gogo.proto";

message NetAddress {
  string id = 1 [(gogoproto.customname) = "ID"];
  string ip = 2 [(gogoproto.customname) = "IP"];
  uint32 port = 3;
}

message NodeInfo {
  string               node_id = 1 [(gogoproto.customname) = "NodeID"];
  string               listen_addr = 2;
  string               network = 3;
  bytes                channels = 4;
  bytes                address = 5;
  string               moniker = 6;
  NodeInfoOther other = 7 [(gogoproto.nullable) = false];
}

message NodeInfoOther {
  string tx_index = 1;
  string rpc_address = 2 [(gogoproto.customname) = "RPCAddress"];
}

// 命令：protoc --gofast_out=. -I=. -I=$GOPATH/src/github.com p2p_types.proto